hotfix: fix html spacing and JS function

--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -15,7 +15,7 @@
   .header__logo{
     max-width: 150px;
     height: 45px;
-    padding-left: 0px;
+    padding-left: 0;
   }
 }
 
